
erDiagram
    users {
        string id PK "UUID"
        string first_name "NOT NULL"
        string last_name "NOT NULL"
        string email "UNIQUE, NOT NULL"
        string password "NOT NULL"
        boolean is_admin "DEFAULT FALSE"
        datetime created_at
        datetime updated_at
    }
    
    places {
        string id PK "UUID"
        string title "NOT NULL"
        text description
        decimal price "NOT NULL"
        float latitude "NOT NULL"
        float longitude "NOT NULL"
        string owner_id FK "NOT NULL"
        datetime created_at
        datetime updated_at
    }
    
    reviews {
        string id PK "UUID"
        text text "NOT NULL"
        int rating "1-5, NOT NULL"
        string user_id FK "NOT NULL"
        string place_id FK "NOT NULL"
        datetime created_at
        datetime updated_at
    }
    
    amenities {
        string id PK "UUID"
        string name "UNIQUE, NOT NULL"
        datetime created_at
        datetime updated_at
    }
    
    place_amenities {
        string place_id FK "PRIMARY KEY"
        string amenity_id FK "PRIMARY KEY"
        datetime created_at
    }
    
    users ||--o{ places : owns
    users ||--o{ reviews : writes
    places ||--o{ reviews : receives
    places }o--o{ amenities : has
